#328 Fix z-index on zoom buttons + location autosuggest
Fixes #328

--- a/modules/core/client/less/modules/leaflet.less
+++ b/modules/core/client/less/modules/leaflet.less
@@ -96,7 +96,7 @@
 .leaflet-top,
 .leaflet-bottom {
   position: absolute;
-  z-index: 1000;
+  z-index: @zindex-dropdown - 1;
   pointer-events: none;
   }
 .leaflet-top {
